Slightly improve speed and fix bugs
1. Use np instead of listcomp in `Tree.leaves` and `Tree.split_nodes`
2. Increase `Tree.default_size`
3. Fix bugs in `Tree.update_n_append`

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:08<00:00, 34.15it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:08<00:00, 34.06it/s]\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:12<00:00, 41.60it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:11<00:00, 44.71it/s]\n"
      ]
     },
     {
@@ -154,8 +154,9 @@
       "X_0 <= 0.318347186 (split, n = 120)\n",
       "\tVal: -0.016954591 (leaf, n = 45)\n",
       "\tVal: -0.001323937 (leaf, n = 75)\n",
-      "[ 0 -1 -1 -2]\n",
-      "[        nan -0.01695459 -0.00132394         nan]\n"
+      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
+      "[        nan -0.01695459 -0.00132394         nan         nan         nan\n",
+      "         nan         nan]\n"
      ]
     }
    ],
@@ -177,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-20 09:14:08,314:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-20 10:16:26,266:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
