--- a/notebooks/01_debug_incdata.ipynb
+++ b/notebooks/01_debug_incdata.ipynb
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 150/150 [00:06<00:00, 22.89it/s]\n"
+      "Iterations: 100%|██████████| 150/150 [00:06<00:00, 22.98it/s]\n"
      ]
     }
    ],
@@ -72,14 +72,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 89/89 [00:18<00:00,  4.82it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:00<00:00, 74.25it/s]\n"
+      "100%|██████████| 89/89 [00:18<00:00,  4.90it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:00<00:00, 75.63it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bart_playground.bart.DefaultBART at 0x7c98022dc690>"
+       "<bart_playground.bart.DefaultBART at 0x7c05c0d60610>"
       ]
      },
      "execution_count": 4,
@@ -110,11 +110,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 1 3 1 3 2 3 2 0 1 1 2 1 1 3 2 1 4 1 3 0 2 1 1 2 1 2 1 1 2 1 3 1 4 1 1 2\n",
-      " 3 1 3 1 2 1 3 1 2 1 1 1 1 2 3 3 1 1 0 2 2 1 1 1 1 2 5 1 3 3 1 0 1 1 2 1 1\n",
-      " 1 4 0 3 0 1 2 4 2 1 2 1 1 2 2 2 2 1 1 1 2 2 1 2 2 2]\n",
-      "(array([ 2,  4,  6, 14, 17, 19, 31, 33, 37, 39, 43, 51, 52, 63, 65, 66, 75,\n",
-      "       77, 81]),)\n"
+      "[2 1 1 2 2 2 2 3 1 1 1 0 3 2 2 1 2 1 1 3 1 1 2 3 1 1 3 2 1 1 1 1 2 1 1 0 1\n",
+      " 2 1 1 0 2 1 2 1 1 2 2 2 1 3 1 1 2 2 2 1 2 1 2 1 1 3 1 1 2 0 1 1 0 1 2 1 1\n",
+      " 2 4 1 1 1 2 4 2 2 1 1 1 2 3 1 1 0 1 1 2 1 1 1 3 2 2]\n",
+      "(array([ 7, 12, 19, 23, 26, 50, 62, 75, 80, 87, 97]),)\n"
      ]
     }
    ],
@@ -135,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00609132])}\n"
+      "{'eps_sigma2': array([0.00727223])}\n"
      ]
     }
    ],
@@ -152,11 +151,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.434105724 (split, n = 270)\n",
-      "\tVal: -0.002246751 (leaf, n = 627)\n",
-      "\tVal: 0.038378343 (leaf, n = 807)\n",
-      "[ 0 -1 -1 -2]\n",
-      "[        nan -0.00224675  0.03837834         nan]\n"
+      "X_0 <= 0.644340694 (split, n = 360)\n",
+      "\tVal: -0.011254027 (leaf, n = 224)\n",
+      "\tVal: 0.001365768 (leaf, n = 136)\n",
+      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
+      "[        nan -0.01125403  0.00136577         nan         nan         nan\n",
+      "         nan         nan]\n"
      ]
     }
    ],
@@ -177,7 +177,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-20 09:07:01,394:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-20 10:31:22,431:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -244,8 +244,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.37678937  0.25270418  0.40240929  0.34834934 -0.0058036   0.35338098\n",
-      "  0.04660599  0.26553857  0.36365548  0.11581229 -0.05939631  0.33455319]\n",
+      "[ 0.40655979  0.34013918  0.36989591  0.30850492 -0.02861053  0.32757756\n",
+      "  0.00287076  0.33968681  0.33602279  0.05486739 -0.02842319  0.34891531]\n",
       "[ 0.35283538  0.44447931  0.37951478  0.29131493 -0.00210506  0.21691883\n",
       "  0.03299222  0.28777375  0.33687941 -0.09693493  0.04100322  0.21133111]\n"
      ]
@@ -265,7 +265,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
