Slightly simplify params.py, etc.

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:08<00:00, 37.00it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:07<00:00, 38.43it/s]\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:09<00:00, 55.10it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:08<00:00, 55.65it/s]\n"
      ]
     },
     {
@@ -152,10 +152,10 @@
      "output_type": "stream",
      "text": [
       "X_0 <= 0.318347186 (split, n = 120)\n",
-      "\tVal: -0.016954591 (leaf, n = 45)\n",
-      "\tVal: -0.001323937 (leaf, n = 75)\n",
+      "\tVal: -0.016954588 (leaf, n = 45)\n",
+      "\tVal: -0.001323917 (leaf, n = 75)\n",
       "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
-      "[        nan -0.01695459 -0.00132394         nan         nan         nan\n",
+      "[        nan -0.01695459 -0.00132392         nan         nan         nan\n",
       "         nan         nan]\n"
      ]
     }
@@ -178,7 +178,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-21 12:55:36,856:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-21 19:29:04,250:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -211,7 +211,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022954695171464423,\n",
+       "{'bart': 0.02295471151344546,\n",
        " 'rf': 0.022139023845392215,\n",
        " 'lr': 0.0480455213280194,\n",
        " 'btz': 0.02390996536764784}"
@@ -245,8 +245,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.28642207  0.35428549  0.31771414  0.36539221  0.40073081  0.36794919\n",
-      " -0.35010413  0.39542453 -0.10834898  0.04257399  0.14588958  0.32570837]\n",
+      "[ 0.28642246  0.35428559  0.31771383  0.36539254  0.40073105  0.36794955\n",
+      " -0.35010419  0.39542506 -0.10834913  0.04257379  0.1458894   0.32570853]\n",
       "[ 0.34923863  0.42552948  0.17644883  0.38525745  0.35193784  0.46601776\n",
       " -0.49488025  0.4582753   0.0037892   0.14973307  0.30298339  0.25992003]\n"
      ]
@@ -307,7 +307,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "False\n"
      ]
     }
    ],
