Fix some small bugs
1. Fix ProbitBART by using np.float32 consistently
2. Fix update_n when append is True

--- a/notebooks/test_binary.ipynb
+++ b/notebooks/test_binary.ipynb
@@ -306,10 +306,10 @@
             "y distribution: {0: 0.6685393258426966, 1: 0.33146067415730335}\n",
             "Dataset: Mushroom\n",
             "X shape: (1624, 22), y shape: (1624,)\n",
-            "y distribution: {0: 0.5240147783251231, 1: 0.47598522167487683}\n",
+            "y distribution: {1: 0.5080049261083743, 0: 0.4919950738916256}\n",
             "Dataset: Mushroom Encoded\n",
             "X shape: (1624, 44), y shape: (1624,)\n",
-            "y distribution: {0.0: 0.5092364532019704, 1.0: 0.4907635467980296}\n"
+            "y distribution: {1.0: 0.5049261083743842, 0.0: 0.49507389162561577}\n"
           ]
         }
       ],
@@ -349,7 +349,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "INFO:2025-06-08 18:23:46,711:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+            "INFO:2025-06-22 13:08:01,977:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
             "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
           ]
         },
@@ -369,7 +369,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:15<00:00, 78.88it/s] \n"
+            "Iterations: 100%|██████████| 1200/1200 [00:12<00:00, 94.19it/s] \n"
           ]
         },
         {
@@ -385,14 +385,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:11<00:00, 101.14it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:09<00:00, 130.15it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.817, LogLoss: 0.553, AUC: 0.8758\n",
+            "    Acc: 0.817, LogLoss: 0.552, AUC: 0.8764\n",
             "    ECE: nan, MCE: nan\n",
             "  Training LogisticBART...\n"
           ]
@@ -401,15 +401,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:20<00:00, 59.92it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:16<00:00, 70.84it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.883, LogLoss: 0.312, AUC: 0.9511\n",
-            "    ECE: 0.0718, MCE: 0.4622\n",
+            "    Acc: 0.883, LogLoss: 0.312, AUC: 0.9508\n",
+            "    ECE: 0.0792, MCE: 0.4606\n",
             "\n",
             "=== Testing on Breast Cancer ===\n",
             "  Training RFClassifier...\n",
@@ -428,15 +428,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:10<00:00, 109.30it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:07<00:00, 162.85it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.936, LogLoss: 0.136, AUC: 0.9864\n",
-            "    ECE: 0.0597, MCE: 0.6345\n",
+            "    Acc: 0.942, LogLoss: 0.123, AUC: 0.9920\n",
+            "    ECE: 0.0430, MCE: 0.3258\n",
             "  Training ProbitBART...\n"
           ]
         },
@@ -444,14 +444,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:11<00:00, 104.75it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:08<00:00, 139.65it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.936, LogLoss: 0.264, AUC: 0.9886\n",
+            "    Acc: 0.936, LogLoss: 0.265, AUC: 0.9892\n",
             "    ECE: nan, MCE: nan\n",
             "  Training LogisticBART...\n"
           ]
@@ -460,7 +460,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:21<00:00, 56.85it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:16<00:00, 74.54it/s]\n"
           ]
         },
         {
@@ -468,7 +468,7 @@
           "output_type": "stream",
           "text": [
             "    Acc: 0.971, LogLoss: 0.103, AUC: 0.9940\n",
-            "    ECE: 0.0494, MCE: 0.4175\n",
+            "    ECE: 0.0495, MCE: 0.4175\n",
             "\n",
             "=== Testing on Wine Binary ===\n",
             "  Training RFClassifier...\n",
@@ -487,7 +487,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:07<00:00, 154.47it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:05<00:00, 226.61it/s]\n"
           ]
         },
         {
@@ -503,7 +503,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:10<00:00, 119.41it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:07<00:00, 167.70it/s]\n"
           ]
         },
         {
@@ -519,7 +519,7 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:20<00:00, 58.80it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:16<00:00, 72.14it/s]\n"
           ]
         },
         {
@@ -531,13 +531,13 @@
             "\n",
             "=== Testing on Mushroom ===\n",
             "  Training RFClassifier...\n",
-            "    Acc: 0.992, LogLoss: 0.170, AUC: 0.9914\n",
+            "    Acc: 0.992, LogLoss: 0.170, AUC: 0.9919\n",
             "    ECE: nan, MCE: nan\n",
             "  Training RFRegressor...\n",
-            "    Acc: 0.994, LogLoss: 0.070, AUC: 0.9975\n",
+            "    Acc: 0.986, LogLoss: 0.068, AUC: 0.9975\n",
             "    ECE: nan, MCE: nan\n",
             "  Training Bartz...\n",
-            "    Acc: 1.000, LogLoss: 0.008, AUC: 1.0000\n",
+            "    Acc: 0.990, LogLoss: 0.048, AUC: 0.9968\n",
             "    ECE: nan, MCE: nan\n",
             "  Training DefaultBART...\n"
           ]
@@ -546,14 +546,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:22<00:00, 52.23it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:15<00:00, 77.57it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.994, LogLoss: 0.031, AUC: 0.9995\n",
+            "    Acc: 0.990, LogLoss: 0.041, AUC: 0.9996\n",
             "    ECE: nan, MCE: nan\n",
             "  Training ProbitBART...\n"
           ]
@@ -562,15 +562,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:16<00:00, 73.43it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:12<00:00, 95.04it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.934, LogLoss: 0.236, AUC: 0.9832\n",
-            "    ECE: 0.1148, MCE: 0.3506\n",
+            "    Acc: 0.955, LogLoss: 0.226, AUC: 0.9872\n",
+            "    ECE: 0.1250, MCE: 0.4625\n",
             "  Training LogisticBART...\n"
           ]
         },
@@ -578,25 +578,25 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:23<00:00, 50.38it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:17<00:00, 67.84it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.973, LogLoss: 0.087, AUC: 0.9980\n",
-            "    ECE: 0.0471, MCE: 0.4317\n",
+            "    Acc: 0.986, LogLoss: 0.078, AUC: 0.9983\n",
+            "    ECE: 0.0401, MCE: 0.4411\n",
             "\n",
             "=== Testing on Mushroom Encoded ===\n",
             "  Training RFClassifier...\n",
-            "    Acc: 0.992, LogLoss: 0.170, AUC: 0.9918\n",
+            "    Acc: 0.988, LogLoss: 0.255, AUC: 0.9877\n",
             "    ECE: nan, MCE: nan\n",
             "  Training RFRegressor...\n",
-            "    Acc: 0.986, LogLoss: 0.058, AUC: 0.9995\n",
-            "    ECE: 0.0374, MCE: 0.4600\n",
+            "    Acc: 0.988, LogLoss: 0.090, AUC: 0.9970\n",
+            "    ECE: nan, MCE: nan\n",
             "  Training Bartz...\n",
-            "    Acc: 0.994, LogLoss: 0.033, AUC: 0.9995\n",
+            "    Acc: 0.994, LogLoss: 0.032, AUC: 0.9998\n",
             "    ECE: nan, MCE: nan\n",
             "  Training DefaultBART...\n"
           ]
@@ -605,15 +605,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:23<00:00, 51.77it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:15<00:00, 78.38it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.990, LogLoss: 0.049, AUC: 0.9995\n",
-            "    ECE: 0.0309, MCE: 0.5468\n",
+            "    Acc: 0.996, LogLoss: 0.057, AUC: 0.9998\n",
+            "    ECE: 0.0449, MCE: 0.4833\n",
             "  Training ProbitBART...\n"
           ]
         },
@@ -621,14 +621,14 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:18<00:00, 66.33it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:13<00:00, 91.14it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.891, LogLoss: 0.362, AUC: 0.9715\n",
+            "    Acc: 0.898, LogLoss: 0.388, AUC: 0.9701\n",
             "    ECE: nan, MCE: nan\n",
             "  Training LogisticBART...\n"
           ]
@@ -637,15 +637,15 @@
           "name": "stderr",
           "output_type": "stream",
           "text": [
-            "Iterations: 100%|██████████| 1200/1200 [00:25<00:00, 47.79it/s]\n"
+            "Iterations: 100%|██████████| 1200/1200 [00:19<00:00, 62.97it/s]\n"
           ]
         },
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "    Acc: 0.957, LogLoss: 0.139, AUC: 0.9931\n",
-            "    ECE: 0.0489, MCE: 0.1188\n"
+            "    Acc: 0.953, LogLoss: 0.141, AUC: 0.9933\n",
+            "    ECE: 0.0502, MCE: 0.1732\n"
           ]
         }
       ],
@@ -694,26 +694,26 @@
             "Accuracy:\n",
             "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
             "Dataset                                                                        \n",
-            "Breast Cancer     0.947        0.936         0.971       0.936         0.924   \n",
-            "Mushroom          1.000        0.994         0.973       0.934         0.992   \n",
-            "Mushroom Encoded  0.994        0.990         0.957       0.891         0.992   \n",
+            "Breast Cancer     0.947        0.942         0.971       0.936         0.924   \n",
+            "Mushroom          0.990        0.990         0.986       0.955         0.992   \n",
+            "Mushroom Encoded  0.994        0.996         0.953       0.898         0.988   \n",
             "Synthetic         0.883        0.858         0.883       0.817         0.900   \n",
             "Wine Binary       0.944        0.944         0.963       0.815         0.926   \n",
             "\n",
             "Model             RFRegressor  \n",
             "Dataset                        \n",
             "Breast Cancer           0.942  \n",
-            "Mushroom                0.994  \n",
-            "Mushroom Encoded        0.986  \n",
+            "Mushroom                0.986  \n",
+            "Mushroom Encoded        0.988  \n",
             "Synthetic               0.858  \n",
             "Wine Binary             0.926  \n",
             "\n",
             "AUC:\n",
             "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
             "Dataset                                                                        \n",
-            "Breast Cancer     0.992        0.986         0.994       0.989         0.920   \n",
-            "Mushroom          1.000        0.999         0.998       0.983         0.991   \n",
-            "Mushroom Encoded  1.000        1.000         0.993       0.971         0.992   \n",
+            "Breast Cancer     0.992        0.992         0.994       0.989         0.920   \n",
+            "Mushroom          0.997        1.000         0.998       0.987         0.992   \n",
+            "Mushroom Encoded  1.000        1.000         0.993       0.970         0.988   \n",
             "Synthetic         0.949        0.952         0.951       0.876         0.900   \n",
             "Wine Binary       0.992        0.985         0.991       0.986         0.903   \n",
             "\n",
@@ -721,42 +721,42 @@
             "Dataset                        \n",
             "Breast Cancer           0.989  \n",
             "Mushroom                0.997  \n",
-            "Mushroom Encoded        0.999  \n",
+            "Mushroom Encoded        0.997  \n",
             "Synthetic               0.932  \n",
             "Wine Binary             0.950  \n",
             "\n",
             "LogLoss:\n",
             "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFClassifier  \\\n",
             "Dataset                                                                        \n",
-            "Breast Cancer     0.126        0.136         0.103       0.264         1.575   \n",
-            "Mushroom          0.008        0.031         0.087       0.236         0.170   \n",
-            "Mushroom Encoded  0.033        0.049         0.139       0.362         0.170   \n",
-            "Synthetic         0.327        0.318         0.312       0.553         2.072   \n",
+            "Breast Cancer     0.126        0.123         0.103       0.265         1.575   \n",
+            "Mushroom          0.048        0.041         0.078       0.226         0.170   \n",
+            "Mushroom Encoded  0.032        0.057         0.141       0.388         0.255   \n",
+            "Synthetic         0.327        0.318         0.312       0.552         2.072   \n",
             "Wine Binary       0.111        0.137         0.128       0.463         1.535   \n",
             "\n",
             "Model             RFRegressor  \n",
             "Dataset                        \n",
             "Breast Cancer           0.118  \n",
-            "Mushroom                0.070  \n",
-            "Mushroom Encoded        0.058  \n",
+            "Mushroom                0.068  \n",
+            "Mushroom Encoded        0.090  \n",
             "Synthetic               0.341  \n",
             "Wine Binary             0.519  \n",
             "\n",
             "ECE:\n",
             "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFRegressor\n",
             "Dataset                                                                    \n",
-            "Breast Cancer     0.039        0.060         0.049         NaN        0.027\n",
-            "Mushroom            NaN          NaN         0.047       0.115          NaN\n",
-            "Mushroom Encoded    NaN        0.031         0.049         NaN        0.037\n",
-            "Synthetic         0.098        0.108         0.072         NaN        0.097\n",
+            "Breast Cancer     0.039        0.043         0.049         NaN        0.027\n",
+            "Mushroom            NaN          NaN         0.040       0.125          NaN\n",
+            "Mushroom Encoded    NaN        0.045         0.050         NaN          NaN\n",
+            "Synthetic         0.098        0.108         0.079         NaN        0.097\n",
             "\n",
             "MCE:\n",
             "Model             Bartz  DefaultBART  LogisticBART  ProbitBART  RFRegressor\n",
             "Dataset                                                                    \n",
-            "Breast Cancer     0.559        0.635         0.417         NaN        0.600\n",
-            "Mushroom            NaN          NaN         0.432       0.351          NaN\n",
-            "Mushroom Encoded    NaN        0.547         0.119         NaN        0.460\n",
-            "Synthetic         0.301        0.256         0.462         NaN        0.564\n"
+            "Breast Cancer     0.559        0.326         0.417         NaN        0.600\n",
+            "Mushroom            NaN          NaN         0.441       0.462          NaN\n",
+            "Mushroom Encoded    NaN        0.483         0.173         NaN          NaN\n",
+            "Synthetic         0.301        0.256         0.461         NaN        0.564\n"
           ]
         }
       ],
