--- a/notebooks/01_debug_incdata.ipynb
+++ b/notebooks/01_debug_incdata.ipynb
@@ -50,7 +50,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 150/150 [00:06<00:00, 22.98it/s]\n"
+      "Iterations: 100%|██████████| 150/150 [00:07<00:00, 20.48it/s]\n"
      ]
     }
    ],
@@ -72,14 +72,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 89/89 [00:18<00:00,  4.90it/s]\n",
-      "Iterations: 100%|██████████| 60/60 [00:00<00:00, 75.63it/s]\n"
+      "100%|██████████| 89/89 [00:16<00:00,  5.31it/s]\n",
+      "Iterations: 100%|██████████| 60/60 [00:00<00:00, 82.18it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<bart_playground.bart.DefaultBART at 0x7c05c0d60610>"
+       "<bart_playground.bart.DefaultBART at 0x7b01cda09850>"
       ]
      },
      "execution_count": 4,
@@ -110,10 +110,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2 1 1 2 2 2 2 3 1 1 1 0 3 2 2 1 2 1 1 3 1 1 2 3 1 1 3 2 1 1 1 1 2 1 1 0 1\n",
-      " 2 1 1 0 2 1 2 1 1 2 2 2 1 3 1 1 2 2 2 1 2 1 2 1 1 3 1 1 2 0 1 1 0 1 2 1 1\n",
-      " 2 4 1 1 1 2 4 2 2 1 1 1 2 3 1 1 0 1 1 2 1 1 1 3 2 2]\n",
-      "(array([ 7, 12, 19, 23, 26, 50, 62, 75, 80, 87, 97]),)\n"
+      "[2 1 3 1 2 2 1 1 1 2 4 1 2 1 2 2 1 0 2 1 1 1 1 1 2 0 2 1 3 1 1 2 4 3 2 0 2\n",
+      " 2 2 1 1 2 2 1 1 2 3 1 2 1 3 1 1 1 2 1 3 1 2 5 3 2 1 1 1 2 2 1 2 2 2 2 3 1\n",
+      " 3 1 1 2 0 4 1 1 3 4 2 2 3 1 2 2 2 2 1 2 4 1 1 2 2 3]\n",
+      "(array([ 2, 10, 28, 32, 33, 46, 50, 56, 59, 60, 72, 74, 79, 82, 83, 86, 94,\n",
+      "       99]),)\n"
      ]
     }
    ],
@@ -134,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00727223])}\n"
+      "{'eps_sigma2': array([0.00762262])}\n"
      ]
     }
    ],
@@ -151,12 +152,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.644340694 (split, n = 360)\n",
-      "\tVal: -0.011254027 (leaf, n = 224)\n",
-      "\tVal: 0.001365768 (leaf, n = 136)\n",
-      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
-      "[        nan -0.01125403  0.00136577         nan         nan         nan\n",
-      "         nan         nan]\n"
+      "X_0 <= 0.143368527 (split, n = 360)\n",
+      "\tVal: -0.026016822 (leaf, n = 68)\n",
+      "\tX_1 <= 0.248643965 (split, n = 292)\n",
+      "\t\tVal: 0.038448609 (leaf, n = 60)\n",
+      "\t\tX_0 <= 0.852566779 (split, n = 232)\n",
+      "\t\t\tVal: -0.038391128 (leaf, n = 191)\n",
+      "\t\t\tVal: -0.000065526 (leaf, n = 41)\n",
+      "[ 0 -1  1 -2 -2 -1  0 -2 -2 -2 -2 -2 -2 -1 -1 -2]\n",
+      "[        nan -0.02601682         nan         nan         nan  0.03844861\n",
+      "         nan         nan         nan         nan         nan         nan\n",
+      "         nan -0.03839113 -0.00006553         nan]\n"
      ]
     }
    ],
@@ -177,7 +183,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-20 10:31:22,431:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-22 14:25:06,601:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -210,7 +216,7 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.020800551823822983,\n",
+       "{'bart': 0.020800545025961018,\n",
        " 'rf': 0.022721420713122355,\n",
        " 'lr': 0.04590326679925266,\n",
        " 'btz': 0.02072978001474411}"
@@ -244,10 +250,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.40655979  0.34013918  0.36989591  0.30850492 -0.02861053  0.32757756\n",
-      "  0.00287076  0.33968681  0.33602279  0.05486739 -0.02842319  0.34891531]\n",
-      "[ 0.35283538  0.44447931  0.37951478  0.29131493 -0.00210506  0.21691883\n",
-      "  0.03299222  0.28777375  0.33687941 -0.09693493  0.04100322  0.21133111]\n"
+      "[ 0.39571475  0.32425331  0.36478581  0.3591502   0.05786393  0.25650243\n",
+      "  0.10105007  0.29788602  0.37173162  0.12596985 -0.01500199  0.31117199]\n",
+      "[ 0.3528354   0.44447932  0.37951478  0.29131493 -0.00210506  0.21691883\n",
+      "  0.03299222  0.28777376  0.3368794  -0.09693494  0.04100322  0.21133111]\n"
      ]
     }
    ],
@@ -265,7 +271,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
