Improve large-sample DefaultBART speed by avoiding svd

--- a/notebooks/01_debug.ipynb
+++ b/notebooks/01_debug.ipynb
@@ -37,8 +37,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.50327821  0.60672224  0.26898966  0.55211673  0.50693811  0.66162097\n",
-      " -0.64127659  0.65112284  0.03487759  0.23276531  0.44055996  0.38216964]\n"
+      "[ 0.59965549  0.66000473  0.60195109  0.59759841 -0.48024437 -0.05465378\n",
+      " -0.09076175 -0.06775115  0.44628062  0.51643207 -0.17564767 -0.18611937]\n"
      ]
     }
    ],
@@ -47,7 +47,7 @@
     "                  \"prune\" : 0.4,\n",
     "                  \"change\" : 0.1,\n",
     "                  \"swap\" : 0.1}\n",
-    "generator = DataGenerator(n_samples=160, n_features=2, noise=0.1, random_seed=42)\n",
+    "generator = DataGenerator(n_samples=1000, n_features=2, noise=0.1, random_seed=42)\n",
     "X, y = generator.generate(scenario=\"piecewise_flat\")\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, random_state=42)\n",
     "np.set_printoptions(suppress=True)\n",
@@ -63,7 +63,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 300/300 [00:08<00:00, 33.90it/s]\n"
+      "Iterations: 100%|██████████| 300/300 [00:09<00:00, 33.00it/s]\n"
      ]
     }
    ],
@@ -82,7 +82,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Iterations: 100%|██████████| 500/500 [00:09<00:00, 55.11it/s]\n"
+      "Iterations: 100%|██████████| 500/500 [00:09<00:00, 53.27it/s]\n"
      ]
     },
     {
@@ -110,10 +110,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1 2 1 2 1 0 2 3 1 1 1 2 1 1 1 2 0 0 2 2 1 2 2 2 2 1 1 3 3 1 1 1 2 1 1 1 3\n",
-      " 1 4 4 2 2 2 3 1 2 0 3 1 1 1 2 1 1 2 2 1 2 4 1 2 1 2 4 2 1 1 2 1 1 1 1 1 0\n",
-      " 3 1 2 2 4 1 3 2 1 1 1 1 1 5 1 1 1 3 1 0 3 2 1 1 2 1]\n",
-      "(array([ 7, 27, 28, 36, 38, 39, 43, 47, 58, 63, 74, 78, 80, 87, 91, 94]),)\n"
+      "[1 1 1 4 3 2 2 1 1 2 1 1 3 2 1 1 5 5 2 1 2 0 1 1 2 1 2 2 2 1 2 1 2 1 0 1 0\n",
+      " 1 1 1 1 1 1 1 1 2 2 1 2 1 2 1 2 2 2 1 2 1 1 2 1 1 1 1 1 1 1 2 1 1 2 2 4 2\n",
+      " 1 1 3 1 1 1 1 2 5 1 1 1 2 2 1 2 2 1 1 1 1 2 1 1 0 1]\n",
+      "(array([ 3,  4, 12, 16, 17, 72, 76, 82]),)\n"
      ]
     }
    ],
@@ -134,7 +134,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'eps_sigma2': array([0.00564062])}\n"
+      "{'eps_sigma2': array([0.00661782])}\n"
      ]
     }
    ],
@@ -151,12 +151,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_0 <= 0.318347186 (split, n = 120)\n",
-      "\tVal: -0.016954629 (leaf, n = 45)\n",
-      "\tVal: -0.001323926 (leaf, n = 75)\n",
-      "[ 0 -1 -1 -2 -2 -2 -2 -2]\n",
-      "[        nan -0.01695463 -0.00132393         nan         nan         nan\n",
-      "         nan         nan]\n"
+      "X_0 <= 0.650110245 (split, n = 750)\n",
+      "\tVal: 0.004659622 (leaf, n = 480)\n",
+      "\tX_1 <= 0.315988928 (split, n = 270)\n",
+      "\t\tVal: -0.005203606 (leaf, n = 74)\n",
+      "\t\tVal: -0.028871579 (leaf, n = 196)\n",
+      "[ 0 -1  1 -2 -2 -1 -1 -2]\n",
+      "[        nan  0.00465962         nan         nan         nan -0.00520361\n",
+      " -0.02887158         nan]\n"
      ]
     }
    ],
@@ -178,7 +180,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:2025-06-22 14:24:27,791:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
+      "INFO:2025-06-23 12:00:55,884:jax._src.xla_bridge:867: Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n",
       "INFO:jax._src.xla_bridge:Unable to initialize backend 'tpu': INTERNAL: Failed to open libtpu.so: libtpu.so: cannot open shared object file: No such file or directory\n"
      ]
     },
@@ -186,9 +188,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.49 A_prune=0.40 (burnin)\n",
-      "Iteration 200/300 P_grow=0.53 P_prune=0.47 A_grow=0.32 A_prune=0.38\n",
-      "Iteration 300/300 P_grow=0.51 P_prune=0.49 A_grow=0.41 A_prune=0.37\n"
+      "Iteration 100/300 P_grow=0.57 P_prune=0.43 A_grow=0.28 A_prune=0.40 (burnin)\n",
+      "Iteration 200/300 P_grow=0.54 P_prune=0.46 A_grow=0.30 A_prune=0.24\n",
+      "Iteration 300/300 P_grow=0.52 P_prune=0.48 A_grow=0.25 A_prune=0.31\n"
      ]
     }
    ],
@@ -211,10 +213,10 @@
     {
      "data": {
       "text/plain": [
-       "{'bart': 0.022954711107684406,\n",
-       " 'rf': 0.022139023845392215,\n",
-       " 'lr': 0.0480455213280194,\n",
-       " 'btz': 0.02390996536764784}"
+       "{'bart': 0.01699852984056321,\n",
+       " 'rf': 0.01570244066836391,\n",
+       " 'lr': 0.04058944845865094,\n",
+       " 'btz': 0.01451765109911874}"
       ]
      },
      "execution_count": 10,
@@ -245,10 +247,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 0.28642181  0.35428538  0.31771417  0.36539151  0.40073182  0.36794943\n",
-      " -0.35010423  0.39542424 -0.10834891  0.04257416  0.14588985  0.32570775]\n",
-      "[ 0.34923863  0.42552948  0.17644884  0.38525745  0.35193783  0.46601775\n",
-      " -0.49488026  0.4582753   0.0037892   0.14973307  0.3029834   0.25992003]\n"
+      "[ 0.24605564  0.27110088  0.28510376  0.26839188 -0.33688342  0.09359006\n",
+      "  0.0220605   0.02451161  0.23247432  0.30771708  0.03145187  0.07369719]\n",
+      "[ 0.36207604  0.4024236   0.3636108   0.36070073 -0.35991025 -0.07537408\n",
+      " -0.09951471 -0.08413056  0.25953454  0.30643553 -0.1562667  -0.16326775]\n"
      ]
     }
    ],
@@ -265,7 +267,7 @@
     {
      "data": {
       "text/plain": [
-       "0.10534048469161521"
+       "0.08625514042334204"
       ]
      },
      "execution_count": 12,
@@ -307,12 +309,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "False\n"
+      "True\n"
      ]
     }
    ],
    "source": [
-    "if np.allclose(bart.trace[-1].evaluate(), bart.trace[-1].evaluate(X_train)):\n",
+    "if np.allclose(bart.trace[-1].evaluate(), bart.trace[-1].evaluate(X_train), atol=1e-6):\n",
     "    print(\"True\")\n",
     "else:\n",
     "    print(\"False\")"
